# cross_dso_example

./: CMakeLists.txt  a.cpp  b.cpp  c.cpp  compute.cpp  construct.cpp  helper.h  helper_impl.h  main.cpp
as_header/: CMakeLists.txt  computeDot.cpp  computeGemm.cpp  helper.h  helper_impl.h  main.cpp
as_library/: CMakeLists.txt  compute.cpp  construct.cpp  helper.h  main.cpp
